# cbmroot

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  CODEOWNERS  CTestCustom.cmake  CbmRoot_test.cmake  Dart.sh  README.md  autoinstall_framework.sh
MQ/: CMakeLists.txt  stop_MQ.sh
MQ/base/: CMakeLists.txt  CbmMQChannels.cxx  CbmMQChannels.h  CbmMQDefs.h
MQ/eTOF/: CMakeLists.txt  CbmDeviceEventBuilderEtofStar2019.cxx  CbmDeviceEventBuilderEtofStar2019.h  CbmDeviceTriggerHandlerEtof.cxx  CbmDeviceTriggerHandlerEtof.h  runEventBuilderEtofStar2019.cxx  runTriggerHandlerEtof.cxx  startMQ_EBStar2020.sh
MQ/histoServer/: CMakeLists.txt  CbmHistoServer.cxx  CbmHistoServer.h  CbmMqHistoServer.cxx  CbmMqHistoServer.h  runCbmHistoServer.cxx  runCbmMqHistoServer.cxx
MQ/hitbuilder/: CMakeLists.txt  CbmDeviceHitBuilderTof.cxx  CbmDeviceHitBuilderTof.h  CbmTofHit.h  runHitBuilderTof.cxx  startMQ_Mcbm.sh.in  startMQ_Mcbm2018.sh  startMQ_Mcbm2020.sh  startMQ_Mcbm2021.sh  startMQ_Star2020.sh  startMQ_cosmicHD.sh
MQ/mcbm/: CMakeLists.txt  CbmDeviceBmonMonitor.cxx  CbmDeviceBmonMonitor.h  CbmDeviceBuildDigiEvents.cxx  CbmDeviceBuildDigiEvents.h  CbmDeviceBuildRawEvents.cxx  CbmDeviceBuildRawEvents.h  CbmDeviceDigiEventSink.cxx  CbmDeviceDigiEventSink.h  CbmDeviceEventBuilder.cxx  CbmDeviceEventBuilder.h  CbmDeviceEventSink.cxx  CbmDeviceEventSink.h  CbmDeviceMcbmEventBuilderWin.cxx  CbmDeviceMcbmEventBuilderWin.h  CbmDeviceMcbmEventSink.cxx  CbmDeviceMcbmEventSink.h  CbmDeviceMcbmMonitorPulser.cxx  CbmDeviceMcbmMonitorPulser.h  CbmDeviceMcbmUnpack.cxx  CbmDeviceMcbmUnpack.h  CbmDeviceUnpack.cxx  CbmDeviceUnpack.h  UnpBuildSink_missing_features.txt  runBuildDigiEvents.cxx  runBuildRawEvents.cxx  runDigiEventSink.cxx  runEventBuilder.cxx  runEventSink.cxx  runMcbmEventSink.cxx  runMcbmEvtBuilderWin.cxx  runMcbmMonitorPulser.cxx  runMcbmUnpack.cxx  runUnpack.cxx  startBuildRawEvents2021.sh.in  startBuildRawEvents2022.sh.in  startBuildRawEventsCosmics2021.sh.in  startEventBuilder.sh.in  startMQBuildRawEvents.sh.in  startMQMcbmEvtBuilderWin2020.sh.in  (+1 more)
MQ/monitor/: CMakeLists.txt  CbmDeviceMonitorPsd.cxx  CbmDeviceMonitorPsd.h  CbmDeviceMonitorReqT0.cxx  CbmDeviceMonitorReqT0.h  CbmDeviceMonitorReqTof.cxx  CbmDeviceMonitorReqTof.h  CbmDeviceMonitorT0.cxx  CbmDeviceMonitorT0.h  CbmDeviceMonitorTof.cxx  CbmDeviceMonitorTof.h  runMonitorPsd.cxx  runMonitorReqT0.cxx  runMonitorReqTof.cxx  runMonitorT0.cxx  runMonitorTof.cxx  startMQSamplerMonitor.sh.in  startMQSamplerPsdMonitor2021.sh.in  startMQSamplerT0Monitor2020.sh.in  startMQSamplerT0Monitor2021.sh.in  startMQSamplerTofMonitor2020.sh.in  startMQSamplerTofMonitor2021.sh.in
MQ/parmq/: CMakeLists.txt  ParameterMQServer.cxx  ParameterMQServer.h  runParameterMQServer.cxx
MQ/sink/: CMakeLists.txt  CbmDevNullSink.cxx  CbmDevNullSink.h  CbmTsaComponentSink.cxx  CbmTsaComponentSink.h  runDevNullSink.cxx  runTsaComponentSink.cxx
MQ/source/: CMakeLists.txt  CbmMCPointSource.cxx  CbmMCPointSource.h  CbmMQTsSamplerRepReq.cxx  CbmMQTsSamplerRepReq.h  CbmMQTsaInfo.cxx  CbmMQTsaInfo.h  CbmMQTsaMultiSampler.cxx  CbmMQTsaMultiSampler.h  CbmMQTsaMultiSamplerTof.cxx  CbmMQTsaMultiSamplerTof.h  CbmMQTsaSampler.cxx  CbmMQTsaSampler.h  CbmMQTsaSamplerTof.cxx  CbmMQTsaSamplerTof.h  CbmStsDigiSource.cxx  CbmStsDigiSource.h  CbmTsConsumerReqDevExample.cxx  CbmTsConsumerReqDevExample.h  runMCPointSource.cxx  runStsDigiSource.cxx  runTsConsumerReqExample.cxx  runTsSamplerRepReq.cxx  runTsaInfo.cxx  runTsaMultiSampler.cxx  runTsaMultiSamplerTof.cxx  runTsaSampler.cxx  runTsaSamplerTof.cxx
MQ/sts/: CMakeLists.txt  CbmDeviceMinimal.cxx  CbmDeviceMinimal.h  CbmDeviceStsLocalReco.cxx  CbmDeviceStsLocalReco.h  runStsLocalReco.cxx  startTest.sh.in
MQ/unpacker/: CMakeLists.txt  CbmDeviceUnpackTofCri.cxx  CbmDeviceUnpackTofCri.h  CbmDeviceUnpackTofMcbm2018.cxx  CbmDeviceUnpackTofMcbm2018.h  CbmDeviceUnpackTofStar2018.cxx  CbmDeviceUnpackTofStar2018.h  CbmTbDaqBuffer.cxx  CbmTbDaqBuffer.h  runUnpackTofCri.cxx  runUnpackTofMcbm2018.cxx  runUnpackTofStar2018.cxx
algo/: CMakeLists.txt  CMakeListsCPU.txt  CMakeListsGPU.txt
algo/base/: BuildInfo.h  ChainContext.h  Options.cxx  Options.h  Prelude.h  RecoParams.h  SubChain.h  Types.cxx  Types.h
algo/data/: CMakeLists.txt
algo/evbuild/: EventBuilder.cxx  EventBuilder.h
algo/evselector/: DigiEventSelector.cxx  DigiEventSelector.h
algo/global/: ParallelUnpackChain.cxx  ParallelUnpackChain.h  ParallelUnpackChainGPU.cxx  ParallelUnpackChainMaximilian.cxx  ParallelUnpackChainMaximilian.h  ParallelUnpackChainMsPar.cxx  ParallelUnpackChainMsPar.h  ParallelUnpackChainZwischenstufe.cxx  Reco.cxx  Reco.h  RecoIO.cxx  RecoIO.h
algo/log/: AlgoFairloggerCompat.h
algo/params/: LandauWidthTable.txt  RecoParams.yaml  StsHitfinder.yaml  StsReadout.yaml
algo/test/: CMakeLists.txt  _GTestDigiEventSelector.cxx  _GTestEventBuilder.cxx  _GTestTimeClusterTrigger.cxx
algo/trigger/: TimeClusterTrigger.cxx  TimeClusterTrigger.h
analysis/: CMakeLists.txt
analysis/detectors/: CMakeLists.txt
beamtime/: CMakeLists.txt
beamtime/base/: CMakeLists.txt  CbmROCUnpack.cxx  CbmROCUnpack.h  CbmTSUnpack.cxx  CbmTSUnpack.h  CbmTbEventBuilder.cxx  CbmTbEventBuilder.h  CbmTbEventBuilderFixedTimeWindow.cxx  CbmTbEventBuilderFixedTimeWindow.h
core/: CMakeLists.txt
macro/: CMakeLists.txt
mvd/: CMakeLists.txt  CbmMvd.cxx  CbmMvd.h  CbmMvdClusterfinder.cxx  CbmMvdClusterfinder.h  CbmMvdClusterfinderTB.cxx  CbmMvdClusterfinderTB.h  CbmMvdDetector.cxx  CbmMvdDetector.h  CbmMvdDigiToHit.cxx  CbmMvdDigiToHit.h  CbmMvdDigiToHitTB.cxx  CbmMvdDigiToHitTB.h  CbmMvdDigitizer.cxx  CbmMvdDigitizer.h  CbmMvdDigitizerTB.cxx  CbmMvdDigitizerTB.h  CbmMvdHitfinder.cxx  CbmMvdHitfinder.h  CbmMvdHitfinderTB.cxx  CbmMvdHitfinderTB.h  CbmMvdLinkDef.h  CbmMvdPileupManager.cxx  CbmMvdPileupManager.h  CbmMvdPixelCharge.cxx  CbmMvdPixelCharge.h  CbmMvdReadout.cxx  CbmMvdReadout.h  CbmMvdSensor.cxx  CbmMvdSensor.h  CbmMvdStationPar.cxx  CbmMvdStationPar.h  CbmMvdTrackingInterface.cxx  CbmMvdTrackingInterface.h
reco/: CMakeLists.txt
(+6572 files in other folders)
