# add subdirectories
add_subdirectory (PWGDIL/dielectron/papaframework)
add_subdirectory (PWGDIL/dielectron/conversion)
add_subdirectory (PWGDIL/dielectron/pi0eta)
add_subdirectory (PWGDIL/dielectron/lmvm)
add_subdirectory (PWGDIL/dimuon)

add_subdirectory (PWGC2F/femtoscopy/nicafemto)
add_subdirectory (PWGC2F/flow)

add_subdirectory (PWGCHA/jpsi)

add_subdirectory (PWGHAD/hadron)

add_subdirectory (common/analysis_tree_converter)
add_subdirectory (common/at_kfpf_interface)

add_subdirectory (detectors)



